--- a/pycomm/static/css/app.less
+++ b/pycomm/static/css/app.less
@@ -11,3 +11,9 @@ body {
     padding-top: 60px;
     padding-bottom: 40px;
 }
+
+.input-errors {
+    font-size: 11px;
+    color: #b94a48;
+    margin-bottom: 5px;
+}
